# medical-chrono-extraction-demo

./: .env.example  .gitignore  AGENT.md  README.md  langgraph.json  pyproject.toml
agent/: __init__.py  graph.py  models.py
agent/aws/: __init__.py  s3_utils.py  secrets_utils.py
agent/aws/lambdas/: __init__.py  dedup_group.py  export_csv.py  extract_chunk.py  group_events.py  load_pdf.py
agent/llm/: __init__.py  prompts.py  provider.py
agent/nodes/: __init__.py  chunking.py  dedup.py  export.py  extract.py
agent/temporal/: activities.py  run_workflow.py  worker.py  workflow.py
agent/utils/: pdf_loader.py
infra/live/: root.hcl  terragrunt.hcl
infra/live/dev/: backend.tf  terraform.tfstate  terragrunt.hcl
infra/live/dev/lambdas/dedup_group/: terragrunt.hcl
infra/live/dev/lambdas/export_csv/: terragrunt.hcl
infra/live/dev/lambdas/extract_chunk/: plan.txt  plan_after.txt  plan_final.txt  terragrunt.hcl
infra/live/dev/lambdas/group_events/: terragrunt.hcl
infra/live/dev/lambdas/load_pdf/: terragrunt.hcl
infra/live/dev/s3/: terragrunt.hcl
infra/live/dev/step_function/: terragrunt.hcl
infra/modules/lambda/: iam.tf  main.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
infra/modules/step_function/: asl.json.tftpl  main.tf  outputs.tf  variables.tf
scripts/: build_lambda.sh
tests/: test_chunking.py  test_dedup.py  test_export.py  test_extraction.py  test_graph.py  test_graph_e2e.py  test_models.py  test_pdf_loader.py  test_prompts.py  test_provider.py
tests/temporal/: __init__.py  test_activities.py  test_workflow.py
